tests/NormalTests/paczka1/small_fuzzy/82558335.err
Error in line 2: VmEw4lEw A296 62,2
Error in line 7: pyttbzT A221 28,8
